force-app/main/default/objects/WebServiceResponseSetting__mdt/WebServiceResponseSetting__mdt.object-meta.xml
<CustomObject>
    <label>WebServiceResponseSetting</label>
    <pluralLabel>WebServiceResponseSettings</pluralLabel>
</CustomObject>