force-app/main/default/objects/WebServiceResponseSetting__mdt/fields/Reponse_Body__c.field-meta.xml
<CustomField>
    <fullName>Reponse_Body__c</fullName>
    <description>Template of the response body in JSON format</description>
    <label>Reponse Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>