force-app/main/default/objects/WebServiceResponseSetting__mdt/fields/WebServiceSetting__c.field-meta.xml
<CustomField>
    <fullName>WebServiceSetting__c</fullName>
    <label>WebServiceSetting</label>
    <referenceTo>WebServiceSetting__mdt</referenceTo>
    <relationshipLabel>WebServiceResponseSettings</relationshipLabel>
    <relationshipName>WebServiceResponseSettings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>